--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
+body {
+  margin: 0;
+}
 #container {
   width: 1320px;
   height: 689px;
-}
-
-body {
-  overflow: hidden;
-  height: 100%;
+  background-image: url("bg0.png");
 }
 
 #rope0 {
@@ -15,6 +14,14 @@ body {
   width: 18px;
 }
 
+#score {
+  position: absolute;
+  left: 32px;
+  font-size: 36px;
+  color: white;
+  font-family: "Arial", sans-serif;
+}
+
 #rope {
   background: url("ropetile.png") repeat;
   width: 90px;
@@ -22,8 +29,8 @@ body {
   transform: rotate(20deg);
   transform-origin: 0 50%;
   position: fixed;
-  top: 167px;
-  left: 670px;
+  top: 156px;
+  left: 662px;
 }
 
 #pliers {
