--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body {
   margin: 0;
 }
 #container {
-  width: 1320px;
-  height: 689px;
+/* width: 1320px; */
+  /* height: 689px; */
+  width: 100vw;
+  height: 100vh;
   background-image: url("bg0.png");
 }
 
@@ -13,13 +15,27 @@ body {
   left: -5px;
   width: 18px;
 }
-
-#score {
-  position: absolute;
-  left: 32px;
+p, h1 {
   font-size: 36px;
+  margin: 16px;
   color: white;
   font-family: "Arial", sans-serif;
+}
+
+#score, #max-score {
+  font-size: 48px;
+  margin: 16px;
+  color: white;
+  font-family: "Arial", sans-serif;
+}
+
+#score-container {
+  position: absolute;
+}
+
+#max-score-container {
+  top: 120px;
+   position: absolute;
 }
 
 #rope {
@@ -42,4 +58,38 @@ body {
 
 .animal {
   position: absolute;
+}
+
+
+#start {
+  background-image: url("bg0.png");
+}
+
+.start-game {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  flex-direction: column;
+  height: 100vh;
+}
+
+#start-button {
+  font-size: 32px;
+  background: rgb(113, 153, 177);
+  color: white;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+#start-button:hover {
+  opacity: .5;
+}
+
+#time {
+position: absolute;
+right: 0;
+font-size: 36px;
+margin: 16px;
+color: white;
+font-family: "Arial", sans-serif;
 }
