fixed results pages

--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ h1 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 15px;
+  background: #c78328;
+  border-radius: 54px;
 }
 
 #scores {
@@ -147,17 +150,19 @@ h1 {
   margin: 5px;
 }
 
-.box {
-  padding: 15px;
-  background: #c78328;
-  border-radius: 54px;
-}
-
 .n1 {
   font-family: "Inter";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 60px;
   line-height: 30px;
   text-align: center;
+}
+
+.win {
+  font-size: 50px;
+  font-weight: 550;
+  line-height: 50px;
+  text-align: center;
+  color: #ffffff;
 }
