--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 #container {
   width: 100vw;
   height: 100vh;
-  background-image: url("bg0.png");
+  background-image: url("bg.png");
 }
 
 #rope0 {
